<resources>
    <string name="app_name">SkyCast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_description">Options menu</string>
    <string name="clouds">Clouds: %1$d%%</string>
    <string name="humidity">Humidity: %1$d%%</string>
    <string name="pressure">Pressure: %1$d hPa</string>
    <string name="wind">Wind: %1$s</string>
    <string name="today_timeline">Today\'s Timeline</string>
    <string name="forecast_5_day">5-Day Forecast</string>
    <string name="settings">Settings</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="invalid_coordinates">Invalid manual coordinates</string>
    <string name="removed_favorite">Removed %s</string>
    <string name="UNDO">Language</string>
    <string name="already_in_favorites">Already in favorites</string>
    <string name="offline_status">⚠️ Offline • Last updated: %s</string>



    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="language">Language</string>
    <string name="general_settings">General Settings</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="use_manual_location">Use Manual Location</string>
    <string name="city_name">City name</string>
    <string name="only_used_when_manual_location_is_enabled">Only used when manual location is enabled</string>
    <string name="enable_manual_entry_of_coordinates">Enable manual entry of coordinates</string>
    <string name="choose_wind_speed_measurement_unit">Choose wind speed measurement unit</string>
    <string name="select_preferred_temperature_unit">Select preferred temperature unit</string>
    <string name="choose_app_language">Choose app language</string>
</resources>